--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             }
         </style>
     </head>
-    <body style="margin-left:300px;margin-right:300px;margin-top: 150px;">
+    <body style="margin-left:300px;margin-right:300px;margin-top: 150px;font-size: 13px;background-color: #d7dee6;">
         <app-root>
             <div class="spinner">
                 <div class="bounce1"></div>
